# TuyaOpen-Community-Projects

./: .gitignore  README.md
T5-Auto-meter/: AGENT.md  CMakeLists.txt  README.md  README_zh.md  app_default.config
T5-Auto-meter/include/: app_config.h
T5-Auto-meter/src/: tuya_main.c
T5-Auto-meter/src/app/: app_i18n.c  app_i18n.h  app_kv.c  app_kv.h  app_metric.c  app_metric.h  app_mock.c  app_mock.h
T5-Auto-meter/src/board/: board_btn.c  board_btn.h  board_io.c  board_io.h  board_pwr.c  board_pwr.h
T5-Auto-meter/src/obd/: ble_compat.c  elm327_ble.c  elm327_ble.h  elm327_spp.c  elm327_spp.h  obd_io.h  obd_pid.c  obd_pid.h  obd_session.c  obd_session.h
T5-Auto-meter/src/sensor/: qmi8658.c  qmi8658.h  sensor_imu.c  sensor_imu.h
T5-Auto-meter/src/ui/: ui.c  ui.h  ui_gauge.c  ui_gauge.h  ui_gforce.c  ui_gforce.h  ui_theme.h
T5-Auto-meter/src/ui/fonts/: lv_font_zh_16.c  lv_font_zh_16.h
Tuya95/: CMakeLists.txt  README.md  README_zh.md  app_default.config
Tuya95/include/: bios_simulator.h  win95_cursor.h  win95_js.h  win95_mine.h  win95_mypc.h  win95_net.h  win95_pipes.h  win95_recycle.h
Tuya95/src/: bios_config.c  bios_config.h  bios_ui.c  bios_ui.h  tuya_main.c  win95_cursor.c  win95_defrag.c  win95_defrag.h  win95_desktop.c  win95_desktop.h  win95_dialup.c  win95_dialup.h  win95_disk.c  win95_disk.h  win95_dos.c  win95_dos.h  win95_html.c  win95_html.h  win95_http10.c  win95_http10.h  win95_http11.c  win95_http11.h  win95_ie.c  win95_ie.h  win95_illegal.c  win95_illegal.h  win95_js.c  win95_kb.c  win95_kb.h  win95_logos.c  win95_logos.h  win95_mine.c  win95_mypc.c  win95_net.c  win95_notepad.c  win95_notepad.h  win95_ntp.c  win95_ntp.h  win95_pairing.c  win95_pairing.h  (+13 more)
